--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -4,10 +4,11 @@ nav {
   position: fixed;
   top: 0;
   padding: 2rem 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.637), rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
+  background: linear-gradient(rgba(0, 0, 0, 0.644), rgba(0, 0, 0, 0.01) 75%, rgba(0, 0, 0, 0));
   background-blend-mode: multiply;
   width: 100%;
-  height: 3rem;
+  height: 6rem;
+  z-index: 100;
 
   display: flex;
   flex-direction: row;
@@ -15,11 +16,15 @@ nav {
   align-items: center;
 
   li {
+    margin-top: -3rem;
     font-size: 2rem;
     color: rgb(209, 209, 209);
     padding: 0 2rem;
     font-family: 'Noto Serif SC', serif;
     font-weight: 400;
+    mix-blend-mode: screen;
+    opacity: 0.7;
+    z-index: 101;
     
     display: inline-flex;
     flex: auto;
