--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -4,7 +4,7 @@
   position: absolute;
   bottom: 0;
 
-  img {
+  img, div.landscape-object {
     margin: 0;
     position: absolute;
 
@@ -22,6 +22,10 @@
         cursor: pointer;
         transition: filter 0.5s ease;
         filter: sepia(4);
+      }
+
+      .book--tiny {
+        position: absolute;
       }
     }
 
