--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,15 @@ h2 {
   display: none;
 }
 
-// #main {
-//   margin-top: 6rem;
-// }
+.App {
+  position: relative;
+
+}
+
+#main {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
