--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -73,12 +73,16 @@
 
 .tooltip {
   position: absolute;
-  text-align: center;
   color: rgb(223, 223, 223);
   z-index: 14;
-  padding: 30px;
-  background-color: rgb(29, 29, 29);
+  // background-color: rgb(29, 29, 29);
   border-radius: 10px;
+  line-height: 0;
+  background-image: url("../assets/box-dark.png");
+  background-size: 100% 100%;
+  white-space: nowrap;
+  user-select: none;
+  pointer-events: none;
 }
 
 .tooltip-enter, {
@@ -101,4 +105,12 @@
   opacity: 0;
   transition: all 500ms ease;
   filter: blur(40px);
+}
+
+#text-test {
+  position: absolute;
+  visibility: hidden;
+  height: auto;
+  width: auto;
+  white-space: nowrap;
 }
