--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -24,6 +24,7 @@ nav {
     font-weight: 400;
     mix-blend-mode: screen;
     z-index: 101;
+    white-space: nowrap;
     
     display: inline-flex;
     flex: auto;
