--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -92,6 +92,12 @@ landscape-container {
     /// dus liefst dynamisch op basis van de huidige kleur die aan de beurt is op website ofzo
     cursor: pointer;
   }
+
+  &.book--large__zoomed {
+    pointer-events: none;
+    z-index: 28;
+    cursor: normal;
+  }
 }
 
 img.book--large__background {
@@ -108,6 +114,7 @@ img.book--large__background {
 
 .book--large__title {
   font-family: 'Cormorant', serif;
+  transition: all 0.4s ease;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -126,16 +133,16 @@ img.book--large__background {
     vertical-align: middle;
     margin: 0;
 
-    background-color: #1d1d1d;
     color: transparent;
     background-clip: text;
+    background-color: #2c2c2c;
     text-shadow: 0rem 1rem 1rem rgba(255, 255, 255, 0.192);
     // background-color: #3f3f3f;
     // text-shadow: 0rem 1rem 1rem rgba(255, 255, 255, 0.856);
 
     &.dark-background {
-      background-color: #3d3d3d;
-      text-shadow: 0rem 1rem 0.6rem rgba(255, 255, 255, 0.856);
+      background-color: rgb(255, 255, 255);
+      text-shadow: 0rem 1rem 0.6rem #3d3d3d63;
     }
 
     &.white-background {
@@ -220,4 +227,66 @@ img.book--large__background {
 .landscape--1-enter.landscape--1-enter-active, .landscape--2-enter.landscape--2-enter-active {
   filter: blur(0) !important;
   transition: all 1000ms ease-out;
+}
+
+.popup-window-background {
+  position: fixed;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.267);
+  z-index: 26;
+  cursor: pointer;
+}
+
+.popup-window {
+  background-image: url("../assets/box-light.png");
+  background-size: 100% 100%;
+  border-radius: 1rem;
+  opacity: 0.95;
+  margin: auto auto;
+  z-index: 30;
+  padding: 2rem;
+  cursor: default;
+
+  &.popup-window-large {
+    width: calc(100vw - 18rem);
+    height: calc(100vh - 14rem);
+  }
+}
+
+.popup-window-background-enter {
+  opacity: 0;
+  filter: blur(40px);
+  & .popup-window-background-enter .popup-window {
+    transform: scale(0, 0);
+  }
+}
+
+.popup-window-background-enter-active {
+  opacity: 1;
+  filter: blur(0);
+  transition: all 500ms ease;
+  & .popup-window-background-enter-active .popup-window {
+    transform: scale(1, 1);
+  }
+}
+
+.popup-window-background-exit {
+  opacity: 1;
+  filter: blur(0);
+  & .popup-window-background-exit .popup-window {
+    transform: scale(1, 1);
+  }
+}
+
+.popup-window-background-exit-active {
+  opacity: 0;
+  filter: blur(40px);
+  transition: all 500ms ease;
+  &  .popup-window-background-exit-active .popup-window {
+    transform: scale(0, 0);
+  }
 }
