Forced scroll block when popup exists

--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -87,6 +87,7 @@ landscape-container {
 
 .book--large {
   transition: all 0.4s ease;
+  z-index: 20;
 
   &:hover {
     transform: translateX(100px);
