--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -271,7 +271,7 @@ img.book--large__background {
 .popup-window-background-enter-active {
   opacity: 1;
   filter: blur(0);
-  transition: all 500ms ease;
+  transition: all 500ms ease 200ms;
   & .popup-window-background-enter-active .popup-window {
     transform: scale(1, 1);
   }
