--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,31 @@ html {
   background-size: cover;
   overflow-x: hidden;
   height: 100%;
+
+  
+
+  
+}
+
+::-webkit-scrollbar {
+  // display: none;
+  width: 1em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.082); 
+  border-radius: 10px;
+
+  &:hover {
+    background: rgba(255, 255, 255, 0.247);
+  }
+}
+
+::-webkit-scrollbar-button, 
+::-webkit-scrollbar-corner, 
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-track-piece {
+  display: none;
 }
 
 body, #root {
