--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -4,10 +4,8 @@
   font-family: 'Rough Typewriter';
   src: url('../assets/fonts/rough_typewriter.otf');
 }
-@font-face {
-  font-family: 'Rough Typewriter';
-  src: url('../assets/fonts/rough_typewriter.otf');
-}
+
+
 
 landscape-container {
   user-select: none;
@@ -99,7 +97,7 @@ landscape-container {
   z-index: 20;
 
   &:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
     z-index: 21;
     filter: sepia(3) hue-rotate(100deg);
     /// dus liefst dynamisch op basis van de huidige kleur die aan de beurt is op website ofzo
@@ -313,10 +311,6 @@ img.book--large__background {
     // font-family: 'Cormorant', serif;
     font-size: 1.3rem;
 
-    code {
-
-    }
-
     strong {
 
     }
@@ -348,9 +342,8 @@ img.book--large__background {
   }
 
   code {
-    font-family: 'Rough Typewriter';
+    font-size: 1rem;
   }
-
   // pre {
     
   // }
