Got the shuffling and stuff of the whole github thing working at a very passable point

--- a/src/components/GithubCode.scss
+++ b/src/components/GithubCode.scss
@@ -1,17 +1,22 @@
-.GithubCode {
+.GithubCodeContainer {
   height: 400vh;
   width: 100vw;
   position: relative;
+  overflow: hidden;
+}
+
+.GithubCode {
+  width: 100%;
   overflow: hidden;
   filter: hue-rotate(80deg);
 
   a {
     text-decoration: none;
     transition: all 0.1s;
-    filter: brightness(0.5);
+    filter: brightness(0.4);
 
     &:hover {
-      filter: brightness(2);
+      filter: brightness(1.5);
     }
   }
   
