--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Cinzel:400,700,900');
 @font-face {
   font-family: 'JMH Typewriter mono';
   src: url('./assets/fonts/JMH Typewriter mono.ttf');
@@ -64,10 +65,6 @@ body, #root {
   position: relative;
 }
 
-h2 {
-  display: none;
-}
-
 code {
   font-family: 'JMH Typewriter mono' !important;
 }
@@ -79,4 +76,8 @@ code {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+h2 {
+  font-family: 'Cinzel', serif;
 }
