--- a/src/components/GithubCode.scss
+++ b/src/components/GithubCode.scss
@@ -3,17 +3,20 @@
   width: 100vw;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .GithubCode {
   width: 100%;
   overflow: hidden;
-  filter: hue-rotate(80deg);
+  // filter: hue-rotate(80deg);
+  filter: sepia(3);
+  
 
   a {
     text-decoration: none;
-    transition: all 0.1s;
-    filter: brightness(0.4);
+    // transition: all 0.1s;
+    filter: brightness(0.3);
 
     &:hover {
       filter: brightness(1.5);
