--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -14,21 +14,23 @@ nav {
   width: 100%;
   height: 6rem;
   z-index: 100;
+  user-select: none;
 
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  pointer-events: none;
 
   li {
     margin-top: -3rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: rgb(223, 223, 223);
-    padding: 0 2rem;
-    font-family: 'Noto Serif SC', serif;
-    font-weight: 400;
+    padding: 0 1.5rem;
+    font-family: 'Aozora Mincho';
     mix-blend-mode: screen;
     z-index: 101;
+    pointer-events: all;
     // white-space: nowrap;
     
     display: flex;
@@ -36,8 +38,10 @@ nav {
     flex-grow: 1;
     justify-content: center;
 
+    // &hover {}
+
     &#center-name {
-      font-size: 4rem;
+      font-size: 5rem;
       max-height: 4rem;
       overflow: visible;
       margin-top: 0;
