--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -26,7 +26,9 @@ nav {
   align-items: center;
   // pointer-events: none;
 
-  li {
+}
+
+li.nav-item {
     margin-top: -3rem;
     font-size: 1.5rem;
     color: rgb(223, 223, 223);
@@ -35,6 +37,7 @@ nav {
     mix-blend-mode: screen;
     z-index: 101;
     pointer-events: all;
+    user-select: none;
     // white-space: nowrap;
     
     display: flex;
@@ -85,6 +88,9 @@ nav {
       white-space: nowrap;
       word-wrap: break-word !important;
       word-break: break-all !important;
+      // cursor: auto;
+      animation: none;
+      z-index: 110;
 
       display: flex;
       flex-direction: column;
@@ -107,5 +113,72 @@ nav {
       }
     }
   }
+
+.nav-overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.75;
+  background-color: rgb(0, 0, 0);
+  z-index: 110;
+  text-align: center;
+  list-style-type: none;
+  transition: all 0.4s ease;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  &:hover {
+    opacity: 0.85
+  }
+
+  #nav-overlay-x {
+    font-size: 4rem;
+    margin: 0 auto 0 auto;
+    flex-grow: 10;
+  }
+
+  #nav-filler-bottom {
+    flex-grow: 10;
+  }
+
+  li {
+    flex-grow: unset;
+    margin: 0;
+  }
+
+  .nav-item {
+    font-size: 2.5rem;
+    padding: 1.5rem;
+  }
+
+  li.sub-nav-item {
+    font-size: 1.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+    opacity: 0.7;
+  }
 }
 
+.nav-overlay-enter {
+  opacity: 0 !important;
+  filter: blur(200px);
+}
+
+.nav-overlay-enter-active {
+  opacity: 1 !important;
+  filter: blur(0);
+  transition: all 400ms ease;
+}
+
+.nav-overlay-exit {
+  opacity: 1 !important;
+  filter: blur(0);
+}
+
+.nav-overlay-exit-active {
+  opacity: 0 !important;
+  filter: blur(200px);
+  transition: all 400ms ease;
+}
