--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -135,7 +135,7 @@ li.nav-item {
 
   #nav-overlay-x {
     font-size: 4rem;
-    margin: 0 auto 0 auto;
+    margin: 2rem auto 0 auto;
     flex-grow: 10;
   }
 
