--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -281,16 +281,17 @@ div.landscape--2-enter.landscape--2-enter-active {
   opacity: 0.95;
   margin: auto auto;
   z-index: 125;
-  padding: 2rem;
+  padding: 5vw;
   overflow-y: scroll;
   cursor: default;
   font-family: 'Cormorant', serif;
   transition: all 0.2s ease;
   font-size: 1rem;
+  max-width: 80vw;
 
   &.popup-window-large {
-    width: calc(100vw - 18rem);
-    height: calc(100vh - 14rem);
+    width: 80vw;//calc(100vw - 18rem);
+    height: calc(100vh - 30vw);//calc(100vh - 14rem);
   }
 
   /*
