--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -116,6 +116,10 @@ li.nav-item {
 
 .nav-overlay {
   position: fixed;
+  // left: 0;
+  // right: 0;
+  // top: 0;
+  // bottom: 0;
   width: 100vw;
   height: 100vh;
   opacity: 0.9;
@@ -124,6 +128,7 @@ li.nav-item {
   text-align: center;
   list-style-type: none;
   transition: all 0.4s ease;
+  overflow: scroll;
 
   display: flex;
   flex-direction: column;
@@ -134,8 +139,8 @@ li.nav-item {
   }
 
   #nav-overlay-x {
-    font-size: 4rem;
-    margin: 2rem auto 0 auto;
+    font-size: 3em;
+    margin: 1rem auto 0 auto;
     flex-grow: 10;
   }
 
@@ -149,14 +154,14 @@ li.nav-item {
   }
 
   .nav-item {
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding: 1.5rem;
   }
 
   li.sub-nav-item {
-    font-size: 1.5rem;
-    padding-top: 0.5rem;
-    padding-bottom: 1rem;
+    font-size: 1.3rem;
+    padding-top: 0.4rem;
+    padding-bottom: 0.8rem;
     opacity: 0.7;
   }
 }
