Everything now works very smoothly on mobile

--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -438,9 +438,9 @@ svg {
 
 .back-arrow {
   position: fixed !important;
-  width: 6rem;
-  left: 2rem;
-  top: calc(50vh - 3rem);
+  width: 8vw;
+  left: 4vw;
+  top: calc(50vh - 4vw);
   z-index: 30;
 
   transition: 0.4s all ease;
