--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -12,11 +12,11 @@ $text-shadow-plus: 0.6;
 nav {
   position: fixed;
   top: 0;
-  padding: 2rem 0;
+  padding: 2vh 0 4vh 0;
   background: linear-gradient(rgba(0, 0, 0, 0.644), rgba(0, 0, 0, 0.01) 75%, rgba(0, 0, 0, 0));
   background-blend-mode: multiply;
   width: 100%;
-  height: 6rem;
+  height: 6vh;
   z-index: 100;
   // user-select: none;
 
@@ -29,10 +29,12 @@ nav {
 }
 
 li.nav-item {
-    margin-top: -3rem;
-    font-size: 1.5rem;
+    // margin-top: -5vh;
+    // font-size: 1.5rem;
+    margin: 0 0;
+    font-size: 2.3vh;
     color: rgb(223, 223, 223);
-    padding: 0 1.5rem;
+    padding: 0 2.4vh;
     font-family: 'Aozora Mincho';
     mix-blend-mode: screen;
     z-index: 101;
@@ -42,7 +44,7 @@ li.nav-item {
     
     display: flex;
     flex: auto;
-    flex-grow: 1;
+    flex-grow: 1; 
     justify-content: center;
     transition: filter 0.4s ease, all 0.2s ease;
 
@@ -78,10 +80,9 @@ li.nav-item {
     }
 
     &#center-name {
-      font-size: 5rem;
-      max-height: 4rem;
+      font-size: 4vh;
+      margin-top: 3vh;
       overflow: visible;
-      margin-top: 0;
       font-weight: 100;
       flex-grow: 10;
       font-family: 'Aozora Mincho';
@@ -108,7 +109,9 @@ li.nav-item {
         background: none;
         color: rgb(223, 223, 223);
         font-family: 'Cinzel', serif;
-        font-size: 1rem;
+        font-size: 1vh;
+        margin: 0;
+        line-height: 1.5vh;
         // white-space: nowrap;
       }
     }
@@ -139,13 +142,14 @@ li.nav-item {
   }
 
   #nav-overlay-x {
-    font-size: 3em;
-    margin: 1rem auto 0 auto;
+    font-size: 2rem;
+    margin: 2rem auto 0 auto;
     flex-grow: 10;
   }
 
   #nav-filler-bottom {
     flex-grow: 10;
+    padding: 0.7rem;
   }
 
   li {
