--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -90,7 +90,7 @@ li.nav-item {
       word-wrap: break-word !important;
       word-break: break-all !important;
       // cursor: auto;
-      animation: none;
+      // animation: none;
       z-index: 110;
 
       display: flex;
