--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -279,7 +279,7 @@ div.landscape--2-enter.landscape--2-enter-active {
   background-image: url("../assets/box-light.png");
   background-size: 100% 100%;
   border-radius: 1rem;
-  opacity: 0.95;
+  opacity: 0.8;
   margin: auto auto;
   z-index: 125;
   padding: 5vw;
@@ -292,7 +292,11 @@ div.landscape--2-enter.landscape--2-enter-active {
 
   &.popup-window-large {
     width: 80vw;//calc(100vw - 18rem);
-    height: calc(100vh - 30vw);//calc(100vh - 14rem);
+    height: calc(100vh - 20vw);//calc(100vh - 14rem);
+
+    @media (max-width: 1400px) {
+      height: calc(100vh - 30vw); // 75px + 6px for border + 3px for padding
+    }
   }
 
   /*
@@ -352,9 +356,13 @@ div.landscape--2-enter.landscape--2-enter-active {
   }
 
   img {
-    // width: 50%;
+    width: 100%;
+    border-radius: 1rem;
     // height: 30px;
     // margin: 2rem 0;
+    &.icon {
+      width: 3rem;
+    }
   }
 
   a {
@@ -365,6 +373,16 @@ div.landscape--2-enter.landscape--2-enter-active {
       color: white;
     }
     transition: all 0.2s ease;
+
+    img.icon {
+      transition: all 0.4s ease;
+
+      &:hover {
+        filter: brightness(0.1);
+        transform: scale(1.3);
+        // opacity: 0.6;
+      }
+    }
   }
   
 
