Typed some more text, made font loading more efficient

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:100,400&subset=japanese');
-@import url('https://fonts.googleapis.com/css?family=Cinzel');
+// @import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:100,400&subset=japanese');
+@import url('https://fonts.googleapis.com/css?family=Cinzel:400');
 @font-face {
   font-family: 'Aozora Mincho';
   src: url('../assets/fonts/AozoraMincho-thin.ttf');
