--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Cinzel:400,700,900|Cormorant:300,300i,400,400i,500,500i,600,600i,700,700i|Old+Standard+TT:400,400i,700|Ovo');
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:100,400&subset=japanese');
+// Cinzel could also be 700, also used to have Old Standard TT
+@import url('https://fonts.googleapis.com/css?family=Cinzel:400|Cormorant:300,400,400i,600|Ovo');
+// @import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:100,400&subset=japanese');
 
 landscape-container {
   user-select: none;
@@ -41,7 +42,7 @@ h2.landscape-name {
   width: 100%;
   top: 4%;
   text-align: center;
-  font-weight: normal;
+  font-weight: 400;
   user-select: none;
 }
 
@@ -139,6 +140,7 @@ img.book--large__background {
 
 .book--large__title {
   font-family: 'Cormorant', serif;
+  font-weight: 400;
   transition: all 0.4s ease;
   position: absolute;
   width: 100%;
@@ -190,6 +192,7 @@ img.book--large__background {
 
 .tooltip {
   font-family: 'Cormorant', serif;
+  font-weight: 400;
   position: absolute;
   color: rgb(223, 223, 223);
   z-index: 14;
@@ -286,6 +289,7 @@ div.landscape--2-enter.landscape--2-enter-active {
   overflow-y: scroll;
   cursor: default;
   font-family: 'Cormorant', serif;
+  font-weight: 300;
   transition: all 0.2s ease;
   font-size: 1rem;
   max-width: 80vw;
@@ -299,15 +303,9 @@ div.landscape--2-enter.landscape--2-enter-active {
     }
   }
 
-  /*
-  font-family: 'Cormorant', serif;
-  font-family: 'Ovo', serif;
-  font-family: 'Cinzel', serif;
-  font-family: 'Old Standard TT', serif;
-  */
-
   h1 {
     font-family: 'Cormorant', serif;
+    font-weight: 600;
     font-size: 4rem;
     line-height: 4rem;
     margin-bottom: 2rem;
@@ -317,6 +315,7 @@ div.landscape--2-enter.landscape--2-enter-active {
   h2 {
     display: block;
     font-family: 'Cinzel', serif;
+    font-weight: 400;
     font-size: 1.6rem;
   }
 
@@ -326,7 +325,6 @@ div.landscape--2-enter.landscape--2-enter-active {
   }
 
   p {
-    // font-family: 'Cormorant', serif;
     font-size: 1.3rem;
 
     strong {
