--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Cinzel:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Cinzel:700');
 @font-face {
   font-family: 'JMH Typewriter mono';
   src: url('./assets/fonts/JMH Typewriter mono.ttf');
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: 'JMH Typewriter mono';
-  src: url('./assets/fonts/JMH Typewriter mono Italic.ttf');
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'JMH Typewriter mono';
-  src: url('./assets/fonts/JMH Typewriter mono Fine.ttf');
-  font-weight: lighter;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'JMH Typewriter mono';
+//   src: url('./assets/fonts/JMH Typewriter mono Italic.ttf');
+//   font-weight: normal;
+//   font-style: italic;
+// }
+// @font-face {
+//   font-family: 'JMH Typewriter mono';
+//   src: url('./assets/fonts/JMH Typewriter mono Fine.ttf');
+//   font-weight: lighter;
+//   font-style: normal;
+// }
 @font-face {
   font-family: 'JMH Typewriter mono';
   src: url('./assets/fonts/JMH Typewriter mono Bold.ttf');
